--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -216,6 +216,7 @@
     "%matplotlib inline\n",
     "\n",
     "#a 3d array of gx[m1][m2][m3], please make sure the dimensions are correct!!!\n",
+    "#we strongly suggest to gain the seismic image before input it to the faultSeg!!!\n",
     "gx,m1,m2,m3 = np.fromfile(\"data/prediction/f3d/gxl.dat\",dtype=np.single),512,384,128\n",
     "os = 12 #overlap width\n",
     "c1 = np.round((m1+os)/(n1-os)+0.5)\n",
